# Fractol

./: CMakeLists.txt  README.md  SchoolCMakeLists.txt  fr_main.txt  main.c  main2.txt  План проекта
includes/: fractol.h  fractol_h.txt
libft/: Makefile
libft/includes/: bonus.h  get_next_line.h  libft.h  tmp.h
libft/srcs/: ft_range_stop.c
sources/: burningship.c  calculate.c  complex.c  draw.c  fractal.c  ft_close.c  game_over.c  get_member.c  hooks.c  hooks.txt  julia.c  main.c  mandelbrot.c  pix_to_coord.c
sources/fractals/: julia.c  mandelbrot.c  mandelbrot.txt
